# Sentinel

./: .gitignore  Cargo.toml  LICENSE  README.md  dev-launch.sh  enable-telegram.sh  install.sh  test-telegram.sh
sentinel-ui/: index.html  package-lock.json  package.json  tsconfig.electron.json  vite.config.ts  wait-and-launch.cjs
sentinel-ui/dist-electron/: main.js  preload.cjs
sentinel-ui/electron/: main.ts  preload.cts
sentinel-ui/src/: App.css  App.tsx  api.ts  index.css
sentinel-ui/src/components/: CodeExecutor.css  CodeExecutor.tsx  LoadingScreen.css  LoadingScreen.tsx
sentinel-ui/src/components/layout/: ContextPanel.css  ContextPanel.tsx  Sidebar.css  Sidebar.tsx  TopBar.css  TopBar.tsx
sentinel-ui/src/pages/: Chat.css  Chat.tsx  Guardian.css  Guardian.tsx  Models.css  Models.tsx  Settings.css  Settings.tsx  Skills.css  Skills.tsx  Vault.css  Vault.tsx
src/: identity.rs  lib.rs  main.rs  migration.rs  util.rs
src/agent/: dispatcher.rs  memory_loader.rs  mod.rs  prompt.rs
src/api/: chat.rs  code.rs  guardian.rs  mod.rs  runtime.rs  settings.rs  skills.rs  vault.rs
src/approval/: mod.rs
src/bridge/: mod.rs
src/config/: mod.rs  schema.rs
src/daemon/: mod.rs
src/guardian/: mod.rs
src/health/: mod.rs
src/hooks/: mod.rs
src/hotkey/: mod.rs
src/notifications/: mod.rs
src/providers/: mod.rs  ollama.rs  ollama_new.rs
src/runtime/: mod.rs
src/security/: mod.rs
src/skillforge/: integrate.rs  mod.rs  scout.rs
src/skills/: mod.rs
src/tools/: bash_exec.rs  code_preview.rs  file_read.rs  file_read_simple.rs  file_write.rs  memory_store.rs  mod.rs  mod_clean.rs  mod_new.rs  traits.rs  traits_new.rs  web_search.rs
src/tray/: mod.rs
src/vault/: mod.rs  token_budget.rs
